# rosneuro_acquisition_eegdev

./: CMakeLists.txt  README.md  package.xml  plugin_eegdev.xml
example/: run.cpp
include/rosneuro_acquisition_eegdev/: EGDDevice.hpp
src/: EGDDevice.cpp  test_egddevice.cpp
test/: TestEgdDevice.cpp  test.bdf  test_egd_device.cpp
